--- a/index.html
+++ b/index.html
@@ -10,9 +10,23 @@
 </head>
 <body>
     <h1>Library</h1>
-
+    <button class="add-book">Add book</button>
     <div class="library">
 
+    </div>
+
+    <div class=form-container>
+        <form>
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title">
+            <label for="author">Author:</label>
+            <input type="text" id="author" name="author">
+            <label for="pageNum">Number of page:</label>
+            <input type="number" id="pageNum" name="pageNum">
+            <label for="hasRead">I have read this book</label>
+            <input type="checkbox" id="hasRead" name="hasRead">
+            <input type="submit">
+        </form>
     </div>
 
     <script src="scripts.js"></script>
